title letterspacing fix

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -289,7 +289,6 @@ h1,
     font-weight: 100;
     font-size: 50px;
     margin-bottom: 40px;
-    letter-spacing: 3px;
     line-height: 1.3;
     @include lg {
         font-size: 32px;
@@ -312,7 +311,6 @@ h2,
     font-weight: 100;
     font-size: 50px;
     margin-bottom: 40px;
-    letter-spacing: 3px;
     line-height: 1.3;
     @include lg {
         font-size: 32px;
@@ -335,7 +333,6 @@ h3,
     font-weight: 100;
     font-size: 30px;
     margin-bottom: 30px;
-    letter-spacing: 2px;
     line-height: 1.3;
     @include lg {
         font-size: 28px;
